Mobile mediaquery 100% done

--- a/componenti.css
+++ b/componenti.css
@@ -656,6 +656,7 @@ footer{
     }
     .marcatore {
         font-size: 14px;
+        margin-bottom: 0.5rem;
     }
 
 
@@ -698,10 +699,14 @@ footer{
         align-items: center;
         padding: 0;
     }
+    .logo-container{
+        padding-left: 8px;
+        padding-top: 8px;
+    }
     .logo-container img{
-        width: 150px;
-        height: 70px;
-        padding-left: 12px;
+        width: 160px;
+        height: 65px;
+       
     }
     .widget-logo p{
         margin-left: 0rem;
@@ -749,6 +754,11 @@ footer{
     .link-copyright{
         display: none;
     }
+}
+
+
+@media only screen and (min-width: 600px) and (max-width: 1024px) {
+    /* Stili per i tablet */
 }
 
 
