--- a/style.css
+++ b/style.css
@@ -467,12 +467,18 @@ video{
     border-radius: 8px;
 }
 .form-richiedi .privacy{
-    padding: 10px;
+    padding: 10px 18px 10px 0px;
+
+}
+.form-richiedi .button-style{
+    margin-left: 5px;
 }
 
+.accordion-btn{
+    padding: 25px;
+}
 
-
-
+/* Media query per smartphone */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
 
 
@@ -507,9 +513,14 @@ video{
         height: 20%;
     }
 
-    @media only screen and (min-width: 370px) and (max-width: 480px) {
+    @media only screen and (min-width: 370px) and (max-width: 400px) {
         .button-container{
             margin-top: -1rem;
+        }
+    }
+    @media only screen and (min-width: 401px) and (max-width: 480px) {
+        .button-container{
+            margin-top: -2rem;
         }
     }
 
@@ -544,11 +555,11 @@ video{
     /* Home container piattaforma */
     .Home-content-container-piattaforma{
         margin: 0rem auto;
-        flex-wrap: wrap;
+        flex-wrap: wrap-reverse;
     }
     .Home-content-container-piattaforma-two{
         margin: 2rem auto 0rem auto;
-        flex-wrap: wrap-reverse;
+        flex-wrap: wrap;
     }
     .piattaforma-description h3{
         font-size: 20px;
@@ -573,7 +584,7 @@ video{
 
     /* Vantaggi */
     .Home-Content-container-scleta{
-        margin: 4rem auto 3rem auto;
+        margin: 1rem auto 3rem auto;
     }
     .Home-Content-container-scleta h3{
         font-size: 22px;
@@ -618,6 +629,7 @@ video{
     }
     .accordion-btn{
         font-size: 14px;
+        padding: 25px;
     }
     .accordion-btn::after{
         right: 0.6rem;
@@ -638,6 +650,14 @@ video{
         height: 2rem;
         padding: 0;
     }
+
+
+    @media only screen and (min-width: 355px) and (max-width: 475px) {
+        .accordion-btn{
+            padding-right: 40px;
+        }
+    }
+
 
 
     /* Latest news */
@@ -695,6 +715,7 @@ video{
     }
     .demo-descrizione{
         margin-top: 0rem;
+        margin-bottom: 1rem;
     }
     .demo-descrizione h3{
         font-size: 22px;
@@ -702,27 +723,34 @@ video{
     .demo-descrizione h5{
         font-size: 18px;
         padding-top: 0;
-        padding-bottom: 0;
+        padding-bottom: 5px;
     }
+
     .button-container-demo .button-style{
         width: 12rem;
         padding: 0px;
-        margin-top: -1rem;
+        margin-top: 0rem;
     }
     .form-richiedi{
         border: none;
-        margin-top: 2rem;
+        margin-top: 1rem;
+        margin-bottom: 2rem;
     }
     .form-richiedi h3{
         font-size: 20px;
+        padding: 0;
+        max-width: 80%;
+        padding-bottom: 5px;
     }
     .form-richiedi input{
         width: 100%;
-        height: 2rem;
+        height: 2.5rem;
+        font-size: 16px;
     }
     .form-richiedi select{
         width: 100%;
         height: 2.5rem;
+        margin-top: 0rem;
     }
     .form-richiedi .privacy{
         padding: 5px;
@@ -732,6 +760,12 @@ video{
         width: 8rem;
     }
 
+
+}
+
+
+/* Media query per tablet */
+@media only screen and (min-width: 600px) and (max-width: 1024px) {
 }
 
 
