--- a/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.css
+++ b/url/BioVitalAgeTherapy/BioVitalAgeTeraphy.css
@@ -317,11 +317,13 @@ span{
         width: 12rem;
         padding: 0;
         margin-top: -0.5rem;
+        margin-bottom: 1rem;
     }
 
     .form-richiedi{
         border: none;
         margin-top: 1rem;
+        margin-bottom: 2rem;
     }
     .form-richiedi h3{
         font-size: 20px;
@@ -333,7 +335,7 @@ span{
         font-size: 16px;
     }
     .form-richiedi select{
-        height: 2.5rem;
+        margin-top: 0rem;
         width: 100%;
         font-size: 16px;
     }
@@ -346,4 +348,8 @@ span{
         height: 2rem;
         width: 10rem;
     }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 1024px) {
+    /* Stili per i tablet */
 }
