--- a/componenti.css
+++ b/componenti.css
@@ -821,6 +821,7 @@ footer{
     }
     .social-container{
         flex-direction: column;
+        align-items: flex-start;
     }
 
     .widget-link{
