Home page, footer, nav bar mediaquery 100% done

--- a/componenti.css
+++ b/componenti.css
@@ -536,6 +536,7 @@ footer{
     display: flex;
     gap: 10px;
     letter-spacing: 1px;
+
 }
 .widget-contatti li p{
     padding: 5px;
@@ -763,8 +764,6 @@ footer{
         justify-content: flex-start;
     }
 }
-
-
 @media only screen and (min-width: 600px) and (max-width: 1024px) {
     .nav-bar{
         display: none;
@@ -851,4 +850,70 @@ footer{
     }
 }
 
+@media (min-width: 1025px) and (max-width: 1399px) {
 
+    .nav-bar{
+        display: none;
+    }
+    .nav-bar-mobile{
+        display: flex;
+    }
+    .menu-container{
+        display: block;
+    }
+    .nav-barMobile__logo-container{
+        width: 14rem;
+        padding: 0;
+    }
+    .linkage-containerMobile{
+        padding-left: 100px;
+    }
+
+    .footer-header-container{
+        padding: 0px;
+        height: 30rem;
+    }
+    .footer-header{
+        padding: 0;
+        width: 100%;
+        height: 100%;
+    }
+    .widget-link{
+        margin-right: -6rem;
+    }
+    #adjust-tablet{
+        margin-left: -5rem;
+    }
+    .widget-contatti{
+        margin-left: -5rem;
+    }
+    .footer-copryright-container {
+        width: 100%;
+        padding: 25px;
+    }
+}
+
+@media (min-width: 1400px) and (max-width: 1700px) {
+    .footer-header-container{
+        padding: 0px;
+        height: 30rem;
+    }
+    .footer-header{
+        padding: 0;
+        width: 90%;
+        height: 100%;
+    }
+    .widget-link{
+        margin-right: -6rem;
+    }
+    #adjust-tablet{
+        margin-left: -5rem;
+    }
+    .widget-contatti{
+        margin-left: -5rem;
+    }
+    .footer-copryright-container {
+        width: 90%;
+        padding: 25px;
+    }
+}
