--- a/url/Industries/industries.css
+++ b/url/Industries/industries.css
@@ -280,11 +280,7 @@ span{
 
 }
 
-
-
-
-
-@media only screen and (min-width: 600px) and (max-width: 1024px) {
+@media only screen and (min-width: 600px) and (max-width: 1023px) {
 
     .Home_Section-tittle{
         height: 220px;
@@ -340,5 +336,62 @@ span{
 
 
 
+@media (min-width: 1024px) and (max-width: 1399px) {
+
+    .Home_Section-tittle{
+        background-size: cover;
+    }
+    .Home_Section-tittle h3{
+        margin-top: 2rem;
+        font-size: 30px;
+        text-align: center;
+    } 
+    .contenitore-video{
+        height: 500px;
+    }
+    .contenitore-description h3{
+        font-size: 28px;
+    }
+    .contenitore-description p{
+        min-width: 30rem;
+    }
+    .contenitore-presentazione p:last-of-type{
+        display: none;
+    }
+    .contenitore-presentazione h3{
+        font-size: 25px;
+    }
+    
+    .home-content-demo .backdrop{
+        display: none;
+    }
+    .demo-descrizione{
+        margin-left: 0rem;
+    }
+    .demo-descrizione h3{
+        font-size: 30px;
+    }
+    .button-container-demo{
+        flex-direction: column;
+    }
+}
+@media (min-width: 1400px) and (max-width: 1700px) {
+    .Home_Section-tittle{
+        background-size: cover;
+    }
+    .Home_Section-tittle h3{
+        margin-top: 2rem;
+        font-size: 30px;
+    } 
+    .contenitore-description{
+        min-width: 80%;
+    }
+    .contenitore-presentazione{
+        min-width: 90%;
+    }
+    .demo-descrizione{
+        margin-left: -38rem;
+    }
+}
 
 
