--- a/url/Innovation/innovation.css
+++ b/url/Innovation/innovation.css
@@ -104,6 +104,7 @@ body{
     color: aliceblue;
     text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
 }
+
 .container-blog-presentation{
     transform: translate(0%,-8%);
 }
@@ -408,7 +409,7 @@ body{
     }
 }
 
-@media only screen and (min-width: 600px) and (max-width: 1024px) {
+@media only screen and (min-width: 600px) and (max-width: 1023px) {
     .Home_Section-tittle{
         height: 400px;
         background-size: cover;
@@ -481,4 +482,66 @@ body{
         font-size: 20px;
     }
 
+}
+
+
+
+@media (min-width: 1024px) and (max-width: 1399px) {
+
+    .Home_Section-tittle{
+        background-size: cover;
+    }
+    .Home_Section-tittle h3{
+        margin-top: 2rem;
+        font-size: 30px;
+        text-align: center;
+    } 
+    .Home_Section-tittle p{
+        display: none;
+    }
+    .img-container-description p{
+        display: none;
+    }
+    .container-blog-presentation{
+        height: 300px;
+        transform: translate(0%,-11.2%);
+    }
+    .container-blog-presentation .img-container{
+        height: 100%;
+        margin: 0;
+    }
+    .img-container-description .arrow-button{
+        color: var(--tittle1);
+    }
+
+    .tittle-news h3,
+    .tittle-news-two h3{
+        font-size: 25px;
+    }
+    .card-descrizione h3{
+        font-size: 25px;
+    }
+    .autore-description{
+        flex-direction: column;
+        margin-top: -1rem;
+        gap: 0;
+    }
+    .card-descrizione{
+        height: 60%;
+    }
+    .card-notizie{
+        height: 40rem;
+    }
+}
+@media (min-width: 1400px) and (max-width: 1700px) {
+    .Home_Section-tittle{
+        background-size: cover;
+    }
+    .Home_Section-tittle h3{
+        margin-top: 2rem;
+        font-size: 30px;
+    } 
+    .card-notizie{
+        height: 40rem;
+    }
 }
